Bug 502452 - The "About" card should be a window.
Summary: The "About" card should be a window.
Status: RESOLVED FIXED
Alias: None
Product: kjournald
Classification: Applications
Component: Browser (other bugs)
Version First Reported In: 24.12.3
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Andreas Cord-Landwehr
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-05 13:57 UTC by Roke Julian Lockhart Beedell
Modified: 2025-05-04 08:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A Screenshot In ENG-eng Of The Window Rendered At 1280 × 720 px (265.32 KB, image/png)
2025-04-05 13:57 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot In ITA-ita Of The Card Rendered At 500 × 497 px (49.98 KB, image/png)
2025-04-29 11:06 UTC, Vincenzo Reale
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roke Julian Lockhart Beedell 2025-04-05 13:57:40 UTC
Created attachment 180028 [details]
A Screenshot In ENG-eng Of The Window Rendered At 1280 × 720 px

SUMMARY

The "About" shouldn't be a card that overlays over the UI. There are no advantages to this over a window - it's square, separate from the rest of the UI, and is closable independently of it. On that note, it has no closure button (unlike a window) so how to close it isn't obvious.

STEPS TO REPRODUCE

1. Select "Help"
2. Select "About"

OBSERVED RESULT

A card appears.

EXPECTED RESULT

A window would appear.

SOFTWARE/OS VERSIONS

> Operating System: Fedora Linux 41
> KDE Plasma Version: 6.3.3
> KDE Frameworks Version: 6.12.0
> Qt Version: 6.8.2
> Kernel Version: 6.13.9-200.fc41.x86_64 (64-bit)
> Graphics Platform: Wayland
Comment 1 Roke Julian Lockhart Beedell 2025-04-05 13:58:16 UTC
(In reply to Roke Julian Lockhart Beedell from comment #0)  
> On that note, it has no closure button (unlike a window) so how to close it isn't obvious.

Ignore that bit. I missed it - I was looking in the top-right.
Comment 2 Vincenzo Reale 2025-04-29 11:06:31 UTC
Created attachment 180770 [details]
A Screenshot In ITA-ita Of The Card Rendered At 500 × 497 px

The card/popup also diplays a strange layout when localized.
Attached you'll find the Italian version.
I expect the libraries to appear under "Librerie in uso", author's contact under "Autori" and translator's contact under "Traduttori".
The translator's contact is also partially hidden by the buttons.
Comment 3 Bug Janitor Service 2025-05-03 15:59:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/kjournald/-/merge_requests/40
Comment 4 Andreas Cord-Landwehr 2025-05-04 08:56:44 UTC
Git commit 420e1490523982ce671b0f389976fc1aac9fabb7 by Andreas Cord-Landwehr.
Committed on 04/05/2025 at 08:51.
Pushed by cordlandwehr into branch 'master'.

Replace custom About dialogs with KirigamiAddons

M  +4    -0    CMakeLists.txt
M  +1    -5    browser/main.cpp
M  +6    -1    org/kde/kjournaldbrowser/CMakeLists.txt
M  +16   -8    org/kde/kjournaldbrowser/GlobalMenu.qml
M  +5    -54   org/kde/kjournaldbrowser/Main.qml
M  +14   -6    org/kde/kjournaldbrowser/TopMenuBar.qml
A  +18   -0    org/kde/kjournaldbrowser/browserapplication.cpp     [License: MIT LGPL(v2.1+)]
A  +24   -0    org/kde/kjournaldbrowser/browserapplication.h     [License: MIT LGPL(v2.1+)]

https://invent.kde.org/system/kjournald/-/commit/420e1490523982ce671b0f389976fc1aac9fabb7