Replace custom About dialogs with KirigamiAddons

BUG: 502452